styled elementslist to show active element, fixed scrollbar issue in elementslist

--- a/src/components/ui/elements_list/elementslist.css
+++ b/src/components/ui/elements_list/elementslist.css
@@ -6,15 +6,12 @@
   flex-direction: column;
   width: 280px;
   background-color: #ffffff;
-  padding: 10px;
   border-bottom-right-radius: 20px;
   border-top-right-radius: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: sticky;
-  top: 3rem; /* Adjust this value based on your header's height if needed */
-  height: calc(
-    100vh - 3rem
-  ); /* Adjust if your header/footer has a different height */
+  top: 3rem;
+  height: calc(100vh - 3rem);
   overflow-y: auto;
 }
 
@@ -33,7 +30,8 @@
   margin-bottom: 20px;
 }
 
-.elements_list .element_group {
+.element_group {
+  width: 100%;
   padding-bottom: 5px;
 }
 
@@ -42,19 +40,19 @@
   font-family: "Be Vietnam Pro", sans-serif;
   font-weight: 400;
   font-style: normal;
+  padding-left: 55px;
   margin-bottom: 18px;
   cursor: pointer;
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
 }
 
 .subitems {
+  overflow: hidden;
   list-style-type: none;
   padding-left: 0;
   margin: 0;
   max-height: 0;
-  overflow: hidden;
   transition: max-height 0.2s ease-out, opacity 0.3s ease-out;
   opacity: 0;
 }
@@ -62,13 +60,8 @@
 .subitems.open {
   display: flex;
   flex-direction: column;
-  padding-left: 23px;
-  max-height: 1000px; /* Large value to ensure it can grow as needed */
+  max-height: 1000px;
   opacity: 1;
-}
-
-.subitem {
-  margin-bottom: 12px;
 }
 
 .arrow {
@@ -89,5 +82,24 @@
 }
 
 .elements_list_inner {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   padding-top: 30px;
+  overflow-y: auto;
+}
+
+.subitem a {
+  display: block;
+  padding: 10px 15px;
+  padding-left: 65px;
+  text-decoration: none;
+  color: inherit;
+  width: 100%;
+}
+
+.subitem.active_element {
+  background-color: #f0f0f0; 
+  color: #333; 
+  font-weight: bold;
 }
